# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.201 2005/04/05 21:33:06 rocket Exp $

  05 Apr 2005; Eric Edgar <rocket@gentoo.org> :
  Removed obsolete files from the livecd directory as the functionality has
  moved into the targets folders

  04 Apr 2005; Eric Edgar <rocket@gentoo.org>
  +targets/netboot/netboot-chroot.sh, +targets/netboot/netboot-controller.sh:
  Additional catalyst 2.0.0 files

  04 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst, arch/arm.py,
  +livecd/cdtar/grub-memtest86+-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.11-cdtar.tar.bz2,
  +livecd/cdtar/isolinux-2.11-memtest86+-cdtar.tar.bz2,
  -livecd/isogen/alpha-isogen.sh, -livecd/isogen/hppa-isogen.sh,
  -livecd/isogen/ppc-isogen.sh, -livecd/isogen/sparc-isogen.sh,
  -livecd/isogen/sparc64-isogen.sh, -livecd/isogen/x86-isogen.sh,
  -livecd/runscript/alpha-archscript.sh,
  -livecd/runscript/default-runscript.sh,
  -livecd/runscript/hppa-archscript.sh, -livecd/runscript/ppc-archscript.sh,
  -livecd/runscript/sparc-archscript.sh, -livecd/runscript/x86-archscript.sh,
  -livecd/runscript-support/gamecdfs-update.sh,
  -livecd/runscript-support/kmerge.sh,
  -livecd/runscript-support/livecdfs-update.sh,
  -livecd/runscript-support/post-kmerge.sh,
  -livecd/runscript-support/pre-kmerge.sh, modules/catalyst_support.py,
  modules/embedded_target.py, modules/generic_stage_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, -modules/netboot.py,
  +modules/netboot_target.py, modules/snapshot_target.py,
  modules/stage1_target.py, +modules/stage4_target.py,
  modules/tinderbox_target.py, targets/embedded/embedded-chroot.sh,
  +targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-preclean-chroot.sh, -targets/embedded/embedded.sh,
  -targets/embedded/kmerge.sh, targets/grp/grp-chroot.sh,